more testing done